Tier I complete: change color and fontFamily

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-.playfairFont {
-	font-family: 'Playfair Display', serif;
+.changeFont {
+	font-family: 'Courier New', sans-serif;
 	font-size: 10px;
 }
